<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="thank_you">Thank you!</string>
    <string name="order_summary_name">Name:<xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="whipped_cream">"Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="initial_quantity_value">2</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="order">Order</string>
    <string name="order_summary_whipped_cream">Add Whipped cream? <xliff:g id="addWippedcream" example="true">%s</xliff:g></string>
    <string name="order_summary_chocolate">Add Chocolate? <xliff:g id="addChocolate" example="true">%s</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="0">%s</xliff:g></string>
    <string name="order_summary_price">Total: <xliff:g id="price" example="$0">%s</xliff:g></string>
    <string name="order_summary_email_subject">Just Java order for <xliff:g id="name" example="Amy">%s</xliff:g></string>
</resources>